overflow bug fixed

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -47,7 +47,16 @@
     text-align: center;
     margin-left: 20px;
   }
+  .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .about > img {
+    height: 250px;
+  }
   .about-text h1 {
+    text-align: center;
     font-size: 30px;
     margin-left: 20px;
   }
